<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wel_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.music.player.PlayerActivity">

    <ImageView
        android:id="@+id/playingBgIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary_shen"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:contentDescription="@string/search_lyric"
                android:src="@mipmap/jiantou_back_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="当前专辑的名称" />

                <TextView
                    android:id="@+id/subTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:gravity="center"
                    android:lines="1"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone"
                    tools:text="@string/artist_tips" />

            </LinearLayout>

           <!-- <ImageView
                android:id="@+id/searchLyricIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:contentDescription="@string/search_lyric"
                android:src="@drawable/ic_search_lyric"
                android:visibility="gone" />-->

            <TextView
                android:id="@+id/searchLyricIv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/search_zj_lyric"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="top"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.cyl.musiclake.view.MultiTouchViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.cyl.musiclake.view.MultiTouchViewPager>

        <LinearLayout
            android:id="@+id/detailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/progressTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/play_time"
                    android:textColor="@color/translucent_white" />


                <SeekBar
                    android:id="@+id/progressSb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxHeight="3dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_holo_light"
                    android:tag="tint_accent_color"
                    android:thumb="@drawable/seekbar_thumb" />


                <TextView
                    android:id="@+id/durationTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/play_time"
                    android:textColor="@color/translucent_white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/dp_8"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="75dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/playQueueIv"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_detail"
                        android:onClick="openPlayQueue" />
                </RelativeLayout>

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/prevPlayIv1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:onClick="prevPlay"
                    android:scaleType="center"
                    android:src="@drawable/ic_skip_previous"
                    android:visibility="gone"
                    app:materialIcon="skip_previous"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="32dp"
                    tools:targetApi="lollipop"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/prevPlayIv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="prevPlay"
                    android:scaleType="center"
                    android:src="@mipmap/up_play_img_icon" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_72"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_8"
                        android:visibility="gone" />

                    <com.cyl.musiclake.view.PlayPauseView
                        android:id="@+id/playPauseIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_8"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        app:anim_duration="300"
                        app:elevation="10dp"
                        tools:ignore="NewApi" />


                    <ProgressBar
                        android:id="@+id/loadingPb"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_8"
                        android:visibility="gone" />

                </FrameLayout>

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/nextPlayIv1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:onClick="nextPlay"
                    android:scaleType="center"
                    android:visibility="gone"
                    app:materialIcon="skip_next"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="32dp"
                    tools:ignore="NewApi" />

                <ImageView
                    android:id="@+id/nextPlayIv"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="nextPlay"
                    android:scaleType="center"
                    android:src="@mipmap/next_play_img_icon" />

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="75dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/collectIv"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@mipmap/aixin_gray_icon"
                        android:contentDescription="@string/love"
                        android:onClick="collectMusic"
                        android:scaleType="centerInside" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/playModeIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_mode"
                    android:gravity="center"
                    android:onClick="changePlayMode"
                    android:src="@drawable/ic_repeat_new"
                    android:visibility="gone"
                    tools:ignore="NewApi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/dp_24"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">


                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/downloadIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"

                    android:gravity="center"
                    android:onClick="downloadMusic"
                    app:materialIcon="arrow_collapse_down"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="24dp"
                    tools:targetApi="lollipop" />

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/shareIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"

                    android:gravity="center"
                    android:onClick="shareMusic"
                    app:materialIcon="share"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="24dp"
                    tools:ignore="NewApi" />

                <ImageView
                    android:id="@+id/equalizerIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/equalizer"
                    android:gravity="center"
                    android:src="@drawable/ic_equalizer"
                    android:visibility="gone"
                    tools:ignore="NewApi,VectorDrawableCompat" />

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/playlistAddIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:onClick="addToPlaylist"
                    app:materialIcon="playlist_plus"
                    app:materialIconColor="@color/white"
                    app:materialIconSize="24dp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/item_loading" />
</RelativeLayout>
